display whole object when no attribute is passed

--- a/qjp.1
+++ b/qjp.1
@@ -144,9 +144,7 @@ for interactive input/output when reading JSON from standard input via pipes.
 .BR fzf (1)
 .SH AUTHOR
 Pedro http://github.com/plainas
-.SH BUGS
-Report bugs at: https://github.com/YOUR_USERNAME/qjp/issues
 .SH COPYRIGHT
-Copyright (c) 2024 qjp contributors
+Copyright (c) Pedro 2025
 .PP
-Licensed under the MIT License. See LICENSE file for details.
+Licensed under the MIT License.
